# ha-ah

./: .gitignore  CHANGELOG.md  README.md  ah-list-sync-plan.md  albert-heijn-koopzegels-plan.md  commands to migrate.txt  hacs.json  index.html  pyproject.toml  search.json
.github/workflows/: pre-commit.yml  quarto-docs.yml  tests.yaml  validate.yml
custom_components/albert_heijn/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  sensor.py  strings.json  sync.py  todo.py
custom_components/albert_heijn/translations/: en.json  nl.json
docs/: DECISIONS.md  hacs-default-submission.md
docs/examples/notebooks/: introduction.ipynb
examples/notebooks/: introduction.html
reference/: Example.html  index.html
scripts/: discover_koopzegels.py  discover_list.py
src/: pyproject.toml
src/python_package_template/: __init__.py  main_example.py
tests/: __init__.py  conftest.py  const.py  test_api.py  test_calendar.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_options_flow.py  test_sensor.py  test_sync.py  test_todo.py
tests/fixtures/: deliveries.json  koopzegels.json  list_items.json  receipts.json  token.json
