[project]
name = "ha-albert-heijn"
version = "0.2.0"
description = "Home Assistant custom integration exposing the Albert Heijn koopzegels balance"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "David Haasnoot" }]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest-homeassistant-custom-component",
  "aioresponses",
  "pre-commit",
  "ruff>=0.8.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --cov=custom_components/albert_heijn --cov-report=term-missing"

[tool.coverage.run]
source = ["custom_components/albert_heijn"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["D", "E", "F", "C4", "I", "UP", "RUF"]
ignore = [
  "D1",
  "D400",
  "D401",
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[project.urls]
Source = "https://github.com/Daafip/ha-ah"
