[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "python_package_template/__init__.py"


[project]
name = "python_package_template"
description = "Python package template"
readme = "README.md"
license = {text = "GNU-GPL V3"}
authors = [
  { name = "Guy Dupuits"},
  { name = "David Haasnoot"},
]

dependencies = [
  "numpy",
  "pydantic"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://hkv-products-services.github.io/python_package_template_uv"
Source = "https://github.com/HKV-products-services/python_package_template_uv"
